update repositories for UMS